# embOSTest

./: .gitignore  .mxproject  CMakeLists.txt  STM32F303RETx_FLASH.ld  embOSTest.elf  embOSTest.hex  embOSTest.ioc
Core/Inc/: RTE_Components.h  cmsis_os.h  main.h
Core/Src/: cmsis_os.c  main.c  stm32f3xx_hal_msp.c
Core/Src/test_threads/: force_switch_thread.c  main_thread.c  queue_thread.c  semaphore_thread.c  switch_thread.c
Drivers/CMSIS/RTOS2/Template/: cmsis_os1.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
